# webscrapping

./: ExportedEstimate.xlsx  README.md  pyproject.toml
Front_end azure/: Dockerfile  compose.yaml  home.py  requirements.txt
back_end/: Dockerfile  Dockerfile_db  api.py  compose.yaml  main.py  pruebas.py  pyproject.toml  requirements.txt  webscrapping.py  wsbd.sql
back_end/config/etc/: my.cnf
back_end/dictionary/: id_to_category_dict_A.pk
front_end/: Dockerfile  Dockerfile_php  compose.yaml  home.py  inserUserBD.py  pyproject.toml  requirements.txt  user.py
front_end/config/: servername.conf
front_end/html/: index.php
mlmodel/: pyproject.toml  test.py
