[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
numpy = "^1.26.4"
scikit-learn = "^1.3.0"
spacy = "^3.7.4"
pydantic = "^2.6.4"
pathlib = "^1.0.1"
joblib = "^1.3.2"
typing = "^3.7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
black = "^23.7.0"

[tool.poetry.group.tf_win]
optional = true

[tool.poetry.group.tf_win.dependencies]
tensorflow = "^2.16.1"

[tool.poetry.group.tf_linux]
optional = true

[tool.poetry.group.tf_linux.dependencies]
tensorflow = "^2.13.0"
