[tool.poetry]
name = "mlmodel"
version = "0.1.0"
description = ""
authors = ["ygalves <yoniliman.galves@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gcc = "^13.2.0"
python3-dev  = "^3.11.4-5"
openssl = "^3.0.10-1ubuntu2.3"
libmariadb-dev = "^1:10.11.4-1
mariadb = "^1.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
